----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-03-30 Michal Cihar  <michal@cihar.com>
    * tbl_indexes.php: Use properly $cfg['PropertiesIconic']  (bug #918072).

2004-03-29 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug 923171, password error when copying a user
    * server_privileges.php: bug 923227, copying a user with table privs

2004-03-26 Marc Delisle  <lem9@users.sourceforge.net>
    * left.php, db_details_structure.php, config.inc.php, Documentation.html,
      libraries/common.lib.php, libraries/config_import.lib.php:
      Sort database and table names in natural order,
      thanks to Hoo Jia Xiong (hoojx)

2004-03-25 Marcel Tschopp <marcel.tschopp@gmx.net>
    * libraries/display_tpl.lib.php, mysqli.dbi.lib.php:
      Mysql4.1 specific fix in function PMA_displayTableBody() (character set
      conversions).

2004-03-25 Marcel Tschopp <marcel.tschopp@gmx.net>
    * tbl_change.php, libraries/dbi/mysql.inc.php, libraries/dbi/mysqli.inc.php:
      Added wrapping function PMA_DBI_field_len.
    * libraries/dbi/mysqli.inc.php: Set default value '' for parameter $link 
      from function PMA_DBI_insert_id().

2004-03-25 Michal Cihar  <michal@cihar.com>
    * libraries/bookmark.lib.php: Fix errors when bookmarktable does not
      exists (bug #922509).
    * lang/sync_lang.sh: I switched to utf-8 so default for czech is utf-8.
    * lang/czech: Fixed typos and improved some texts.

2004-03-24 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug 922553, wrong boundary check in
      PMA_flipstring(), thanks to Virgile Petit (pvtc)

2004-03-24 Michal Cihar  <michal@cihar.com>
    * lang/*: Added missing "$strConnectionError" (bug #922006).
    
2004-03-23 Olivier Mueller <om@omnis.ch>
    * libraries/mysql_wrappers.lib.php: added mysqli support to the
      PMA_mysql_field_flags function because mysqli does not know the function